--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
   const firebaseConfig = {
-    apiKey: "TON_PROJET",
+    apiKey: "TA_API_KEY",
     authDomain: "TON_PROJET.firebaseapp.com",
     projectId: "TON_PROJET",
   };
