--- a/client.html
+++ b/client.html
@@ -17,7 +17,7 @@
   import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
   const firebaseConfig = {
-    apiKey: "TA_API_KEY",
+    apiKey: "TON_PROJET",
     authDomain: "TON_PROJET.firebaseapp.com",
     projectId: "TON_PROJET",
   };
